// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`set(action, n):  - response 1`] = `
Object {
  "basename": "base",
  "hash": "yolo",
  "location": Object {
    "blocked": null,
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "base",
        "hash": "yolo",
        "location": Object {
          "key": "345678",
          "pathname": "/bar",
          "scene": "",
          "search": "hell=yea",
          "url": "/base/bar?hell=yea#yolo",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {
          "hell": "yea",
        },
        "state": Object {
          "something": 123,
        },
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "index": 0,
    "key": "345678",
    "kind": "back",
    "length": 2,
    "n": -1,
    "pathname": "/bar",
    "pop": true,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 1,
        "key": "345678",
        "pathname": "/second",
        "scene": "",
        "search": "",
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "scene": "",
    "search": "hell=yea",
    "status": 200,
    "url": "/base/bar?hell=yea#yolo",
  },
  "params": Object {
    "foo": "bar",
  },
  "query": Object {
    "hell": "yea",
  },
  "state": Object {
    "something": 123,
  },
  "type": "FIRST",
}
`;

exports[`set(action, n):  - response 2`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "base",
        "hash": "yolo",
        "location": Object {
          "key": "345678",
          "pathname": "/bar",
          "scene": "",
          "search": "hell=yea",
          "url": "/base/bar?hell=yea#yolo",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {
          "hell": "yea",
        },
        "state": Object {
          "something": 123,
        },
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "next",
    "length": 2,
    "n": 1,
    "pathname": "/second",
    "pop": true,
    "prev": Object {
      "basename": "base",
      "hash": "yolo",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/bar",
        "scene": "",
        "search": "hell=yea",
        "url": "/base/bar?hell=yea#yolo",
      },
      "params": Object {
        "foo": "bar",
      },
      "query": Object {
        "hell": "yea",
      },
      "state": Object {
        "something": 123,
      },
      "type": "FIRST",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/second",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`set(action, n):  - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`set(action, n):  - routes - NEVER_USED_PATHLESS - thunk 2`] = `0`;

exports[`set(action, n):  - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`set(action, n):  - routes - REDIRECTED - onComplete 2`] = `0`;

exports[`set(action, n):  - sessionStorage 1`] = `
Object {
  "entries": Array [
    Array [
      "/base/bar?hell=yea#yolo",
      Object {
        "something": 123,
      },
      "345678",
    ],
    Array [
      "/second",
      Object {},
      "345678",
    ],
  ],
  "index": 0,
}
`;

exports[`set(action, n):  - sessionStorage 2`] = `
Object {
  "entries": Array [
    Array [
      "/base/bar?hell=yea#yolo",
      Object {
        "something": 123,
      },
      "345678",
    ],
    Array [
      "/second",
      Object {},
      "345678",
    ],
  ],
  "index": 1,
}
`;

exports[`set(action, n):  - state 1`] = `
Object {
  "location": Object {
    "basename": "base",
    "blocked": null,
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "base",
        "hash": "yolo",
        "location": Object {
          "key": "345678",
          "pathname": "/bar",
          "scene": "",
          "search": "hell=yea",
          "url": "/base/bar?hell=yea#yolo",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {
          "hell": "yea",
        },
        "state": Object {
          "something": 123,
        },
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "yolo",
    "index": 0,
    "key": "345678",
    "kind": "back",
    "length": 2,
    "n": -1,
    "params": Object {
      "foo": "bar",
    },
    "pathname": "/bar",
    "pop": true,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 1,
        "key": "345678",
        "pathname": "/second",
        "scene": "",
        "search": "",
        "url": "/second",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "SECOND",
    },
    "query": Object {
      "hell": "yea",
    },
    "scene": "",
    "search": "hell=yea",
    "state": Object {
      "something": 123,
    },
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/base/bar?hell=yea#yolo",
  },
  "title": "FIRST",
}
`;

exports[`set(action, n):  - state 2`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "base",
        "hash": "yolo",
        "location": Object {
          "key": "345678",
          "pathname": "/bar",
          "scene": "",
          "search": "hell=yea",
          "url": "/base/bar?hell=yea#yolo",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {
          "hell": "yea",
        },
        "state": Object {
          "something": 123,
        },
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "next",
    "length": 2,
    "n": 1,
    "params": Object {},
    "pathname": "/second",
    "pop": true,
    "prev": Object {
      "basename": "base",
      "hash": "yolo",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/bar",
        "scene": "",
        "search": "hell=yea",
        "url": "/base/bar?hell=yea#yolo",
      },
      "params": Object {
        "foo": "bar",
      },
      "query": Object {
        "hell": "yea",
      },
      "state": Object {
        "something": 123,
      },
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND",
}
`;

exports[`set(action, n):  - title 1`] = `"FIRST"`;

exports[`set(action, n):  - title 2`] = `"SECOND"`;

exports[`set(action, n):  - windowLocation 1`] = `"/base/bar?hell=yea#yolo"`;

exports[`set(action, n):  - windowLocation 2`] = `"/second"`;

exports[`set(action, n): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"set","args":[{"params":{"foo":"bar"},"query":{"hell":"yea"},"hash":"yolo","basename":"base","state":{"something":123}},-1,null]}} - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "entries": Array [
      Object {
        "basename": "base",
        "hash": "yolo",
        "location": Object {
          "key": "345678",
          "pathname": "/bar",
          "scene": "",
          "search": "hell=yea",
          "url": "/base/bar?hell=yea#yolo",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {
          "hell": "yea",
        },
        "state": Object {
          "something": 123,
        },
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "index": 1,
    "key": "345678",
    "kind": "set",
    "length": 2,
    "n": 1,
    "pathname": "/second",
    "scene": "",
    "search": "",
    "url": "/second",
  },
  "params": Object {},
  "prev": Object {
    "basename": "base",
    "hash": "yolo",
    "location": Object {
      "index": 0,
      "key": "345678",
      "pathname": "/bar",
      "scene": "",
      "search": "hell=yea",
      "url": "/base/bar?hell=yea#yolo",
    },
    "params": Object {
      "foo": "bar",
    },
    "query": Object {
      "hell": "yea",
    },
    "state": Object {
      "something": 123,
    },
    "type": "FIRST",
  },
  "query": Object {},
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`set(action, n): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"set","args":[{"params":{"foo":"bar"},"query":{"hell":"yea"},"hash":"yolo","basename":"base","state":{"something":123}},-1,null]}} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`set(action, n): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"set","args":[{"params":{"foo":"bar"},"query":{"hell":"yea"},"hash":"yolo","basename":"base","state":{"something":123}},-1,null]}} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`set(action, n): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"set","args":[{"params":{"foo":"bar"},"query":{"hell":"yea"},"hash":"yolo","basename":"base","state":{"something":123}},-1,null]}} - sessionStorage 1`] = `
Object {
  "entries": Array [
    Array [
      "/base/bar?hell=yea#yolo",
      Object {
        "something": 123,
      },
      "345678",
    ],
    Array [
      "/second",
      Object {},
      "345678",
    ],
  ],
  "index": 1,
}
`;

exports[`set(action, n): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"set","args":[{"params":{"foo":"bar"},"query":{"hell":"yea"},"hash":"yolo","basename":"base","state":{"something":123}},-1,null]}} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "base",
        "hash": "yolo",
        "location": Object {
          "key": "345678",
          "pathname": "/bar",
          "scene": "",
          "search": "hell=yea",
          "url": "/base/bar?hell=yea#yolo",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {
          "hell": "yea",
        },
        "state": Object {
          "something": 123,
        },
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "base",
      "hash": "yolo",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/bar",
        "scene": "",
        "search": "hell=yea",
        "url": "/base/bar?hell=yea#yolo",
      },
      "params": Object {
        "foo": "bar",
      },
      "query": Object {
        "hell": "yea",
      },
      "state": Object {
        "something": 123,
      },
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND",
}
`;

exports[`set(action, n): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"set","args":[{"params":{"foo":"bar"},"query":{"hell":"yea"},"hash":"yolo","basename":"base","state":{"something":123}},-1,null]}} - title 1`] = `"SECOND"`;

exports[`set(action, n): {"type":"@@rudy/CALL_HISTORY","payload":{"method":"set","args":[{"params":{"foo":"bar"},"query":{"hell":"yea"},"hash":"yolo","basename":"base","state":{"something":123}},-1,null]}} - windowLocation 1`] = `"/second"`;
